Adicição e commit de alteração versao 0.0.1

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     Prática Integradora Desenvolvimento de Apps
+    1 - Adicição e commit de alterações versão 0.0.1
 </body>
 </html>
