--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pratica 10 </title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0s;
+            background-image: url("Images/natal.png");
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100vh;
+        }
+        h1, p{
+            color: white;
+        }
+        h1{
+            margin-top: 20vh;
+        }
+    </style>
 </head>
 <body>
-    Prática Integradora Desenvolvimento de Apps
-    1 - Adicição e commit de alterações versão 0.0.1
+    <h1>Prática Integradora Desenvolvimento de Apps</h1>
+    <p>1 - Adicição e commit de alterações versão 0.0.1</p>
 </body>
+
 </html>
